# water-lab-analytics

./: .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml  release.yml
docs/: LICENSE_ACTIVATION.md  supabase-activate-function.ts  supabase-license.sql
scripts/: generate-license.mjs  hash-license-key.mjs  license-keypair.mjs
src-tauri/: Cargo.toml  aliases.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/commands/: archive.rs  auth.rs  data.rs  export.rs  license.rs  mod.rs  settings.rs
src-tauri/src/models/: file_info.rs  measurement.rs  mod.rs  query.rs
src-tauri/src/parser/: excel_reader.rs  mod.rs  normalizer.rs  structure.rs  validator.rs
src-tauri/src/storage/: cache.rs  database.rs  migrations.rs  mod.rs
src-tauri/src/watcher/: mod.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/auth/: LoginForm.tsx
src/components/charts/: ChartControls.tsx  CustomTooltip.tsx  StatsSummary.tsx  TimeSeriesChart.tsx
src/components/files/: FileDetails.tsx  FileItem.tsx  FileList.tsx  FileStatusBadge.tsx
src/components/filters/: DateRangePicker.tsx  ObjectSelector.tsx  TankSelector.tsx  TestTypeSelect.tsx
src/hooks/: useArchive.ts  useAuth.ts  useChartData.ts  useTauriEvent.ts
src/lib/: app-config.ts  chart-optimization.ts  parameter-links.ts  tauri-api.ts  trendlines.ts  types.ts  utils.ts
src/stores/: auth-store.ts  data-store.ts
(+11 files in other folders)
