[package]
name = "water-lab-analytics"
version = "1.2.2"
description = "Water treatment lab analytics desktop app"
authors = ["codex"]
edition = "2021"

[lib]
name = "water_lab_analytics_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-dialog = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
calamine = "0.26"
rayon = "1.10"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
sha2 = "0.10"
argon2 = "0.5"
thiserror = "2.0"
notify = "7.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
regex = "1.11"
once_cell = "1.20"
parking_lot = "0.12"
rand = "0.8"
zip = "2.4.2"
base64 = "0.22"
ed25519-dalek = "2.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[dev-dependencies]
tempfile = "3.15"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
